Override mushtache file to generate pageable response.
